# data765-intro-python-tutoring

./: .gitignore  README.md  pyproject.toml
data/: pokedex.csv
notebooks/: 01-boolean_and_mut.ipynb  02-collections_basics.ipynb  03-conditionals.ipynb  03-control_flow.ipynb  04-functions.ipynb  05-midterm_miscellanea.ipynb  06-scraping_extra.ipynb  07-numpy_basics.ipynb  08-pandas.ipynb  09-eda.ipynb  20210913_boolean_and_mut.ipynb
smolpokeapi/: __main__.py  smolapi.py
thesis_2023/: 01_cleaning.ipynb  02_analysis.ipynb  03_requested_ex.ipynb  parqgss.py
thesis_2023/data/: Safiya_extract_3-1-2023.csv  Safiya_extract_3-20-2023.csv  Theo_Extract_2-21-2023.csv  safiya_clean.csv  safiya_clean_dummies.csv  theo_clean.csv
thesis_2023/loaders/: __main__.py  clean_from_raw.py  cleaners.py  parqgss.py
thesis_2023/tables/: tabs.typ
