[tool.poetry]
name = "data765_tutoring"
version = "1.0.0"
description = "Tutoring Notebooks for Data 765 (Introduction to Python)."
authors = ["Joshua Megnauth"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
pandas = "^1.4.3"
requests = "^2.28.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
