[tool.poetry]
name = "data765_tutoring"
version = "1.3.0"
description = "Tutoring Notebooks for Data 765 (Introduction to Python) and the thesis."
authors = ["Joshua Megnauth"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
numpy = ">=1.24.2"
pandas = "^1.5.3"
requests = "^2.28.1"
seaborn = "^0.11.2"
statsmodels = "^0.13.5"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ruff = "^0.0.255"

[tool.poetry.group.thesis.dependencies]
pyarrow = "^11.0"
samplics = "^0.4.5"

[tool.poetry.group.pokescraper.dependencies]
asyncio = "^3.4.3"

[tool.ruff]
fix = true
select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "SIM",
    "PD", # pandas
    "NPY" # NumPy
]
typing-modules = ["numpy.typing"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
